# pose_pretrain

./: .gitignore  README.md  __init__.py  dataloader.py  path_setup.py  project_structure.md  pyproject.toml  requirements.txt  setup.py
config/: config.yaml
config/data/: h36m.yaml
config/models/: pretrain_model1.yaml  pretrain_vit.yaml
notebooks/: Pre_train_3dhp.ipynb  Pretrain_Human3.6M.ipynb
src/: __init__.py
src/data/: dataloader.py  transforms.py
src/data/datasets/: __init__.py  h36m_dataset.py
src/models/: __init__.py  loss.py  pretrain_model.py  pretrain_vit_model.py
src/models/components/: __init__.py  attention.py  encoders.py  vision_transformer.py
src/scripts/: __init__.py  evaluate.py  inference.py  train.py
src/trainers/: trainer.py
src/utils/: __init__.py  device.py  logger.py  visualization.py
tests/: test_imports.py
