[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "pose_pretrain"
version = "0.1.0"
description = "A production-level ML system for unsupervised pretraining of Human Pose Estimation models"
authors = ["Ying Liu<sophia.j.liu@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = ">=3.8"
torch = ">=1.12.0"
torchvision = ">=0.13.0"
numpy = ">=1.20.0"
scipy = ">=1.7.0"
matplotlib = ">=3.4.0"
pyyaml = ">=6.0"
tqdm = ">=4.62.0"
pandas = ">=1.3.0"
h5py = ">=3.6.0"
pillow = ">=8.3.0"
opencv-python = ">=4.5.3"
imageio = ">=2.9.0"
tensorboard = ">=2.7.0"
scikit-learn = ">=1.0.0"
torchmetrics = ">=0.7.0"
plotly = ">=5.3.0"
seaborn = ">=0.11.2"
colorama = ">=0.4.4"
requests = ">=2.26.0"
rich = ">=10.12.0"
omegaconf = ">=2.1.1"

[tool.poetry.group.dev.dependencies]
pytest = ">=6.2.5"
black = ">=21.9b0"
isort = ">=5.9.3"
mypy = ">=0.910"
pylint = ">=2.11.1"
jupyterlab = ">=3.1.0"
ipywidgets = ">=7.6.0"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true

[tool.pylint.messages_control]
disable = [
    "C0111",  # missing-docstring
    "C0103",  # invalid-name
    "C0330",  # bad-continuation
    "C0326",  # bad-whitespace
]

[tool.pylint.format]
max-line-length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=src" 